MOD-131 Implemented backend part (#17)
* MOD-131 Implemented backend part

* MOD-131 Implemented tests for backend

* MOD-131 Implemented frontend features incl. tests

* Fixed unit test

* Added vscode debugger configuration
